# lab2

./: CMakeLists.txt  main.cpp
src/:  BitSequence.h  ArraySequence.h  ArraySequenceBase.h  BitSequence.h  DynamicArray.h  ImmutableArraySequence.h  ImmutableListSequence.h  LinkedList.h  ListSequence.h  ListSequenceBase.h  MutableArraySequence.h  MutableListSequence.h  ResultInfo.h  Sequence.h  all_tests.h
tests/: run_all_tests.cpp  test_array_sequence.cpp  test_bit_sequence.cpp  test_dynamic_array.cpp  test_linked_list.cpp  test_list_sequence.cpp  test_matrix.cpp  test_mutable_array.cpp  test_mutable_list.cpp  test_operators.cpp  test_result_info.cpp  test_sequences.cpp  test_utils.cpp
