cmake_minimum_required(VERSION 3.28)
project(lab2)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab2 main.cpp
#        tests/test_operators.cpp
#        tests/run_all_tests.cpp
#        tests/test_dynamic_array.cpp
#        tests/test_linked_list.cpp
#        tests/test_mutable_array.cpp
#        tests/test_mutable_list.cpp
#        tests/test_result_info.cpp
)
